# fin-dashboard

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth_api.py
backend/app/core/: config.py  middleware.py
backend/app/services/: auth_service.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts
frontend/src/components/: AuthInput.tsx
